tests/syntax/good/expr_assign1.c
void f() {

x = y = z = 3;

}

