tests/syntax/bad/expr_assign2.c
void f() {

= f(3);

}

